# TrabalhosCBD

./: .gitignore  .~lock.consulta_cand_2018_BRASIL.csv#  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  README.md  cmake_install.cmake  configure.ac  libvhdf.so.0  partidos.csv
.vscode - Copy/: launch.json  settings.json
include/: BlockIO.hpp  Campo.hpp  Data.hpp  DataBlock.hpp  Equijoin.hpp  HEAD.hpp  Hash.hpp  Heap.hpp  Hora.hpp  Index.hpp  MemoryWrapper.hpp  Ordered.hpp  OrganizacaoHash.hpp  OrganizacaoHeap.hpp  OrganizacaoOrdenada.hpp  Parser.hpp  ParserPartido.hpp  Query.hpp  Registro.hpp  Schema.hpp  Serializable.hpp  TableUtils.hpp  Timestamp.hpp  Util.hpp  main.h  main.hpp  registro.hpp
include/Parser/: Parser.hpp  Registro.hpp  RegistroPartido.hpp
lib/vhdf-1.0.0/: CMakeLists.txt  Makefile  Makefile.in  cmake_install.cmake  configure
lib/vhdf-1.0.0/include/: vhdf.hpp
lib/vhdf-1.0.0/src/: vhdf.cpp
src/: BlockIO.cpp  Campo.cpp  Data.cpp  DataBlock.cpp  Equijoin.cpp  Hora.cpp  IO.cpp  MemoryWrapper.cpp  OrganizacaoHash.cpp  OrganizacaoHeap.cpp  OrganizacaoOrdenada.cpp  Parser.cpp  ParserPartido.cpp  Query.cpp  Registro.cpp  RegistroPartido.cpp  Util.cpp  main.cpp
src/Hash/: Delete.cpp  Insert.cpp  Select.cpp  Test.cpp
src/Heap/: Delete.cpp  Insert.cpp  Select.cpp  Test.cpp
src/Join/: EquijoinMerge.cpp  EquijoinMergeHash.cpp  EquijoinNested.cpp
src/Ordered/: Delete.cpp  Insert.cpp  Select.cpp  Test.cpp
src/Parser/: Registro.cpp  RegistroPartido.cpp
